Remove mm-log dependency
Use dlog directly instead of mm-log through mm_debug.h

[Version] 0.10.134
[Profile] Common
[Issue Type]
[Dependency module] N/A
[Test] [M(T) - Boot=(OK), sdb=(OK), Home=(OK), Touch=(OK), Version=tizen-unified_20170913.3]

Change-Id: I7e77d0cb8c6043aea1417e5eaad590547858eaa4
Signed-off-by: Jeongmo Yang <jm80.yang@samsung.com>

--- a/configure.ac
+++ b/configure.ac
@@ -132,6 +132,10 @@ PKG_CHECK_MODULES(DPM, dpm)
 AC_SUBST(DPM_CFLAGS)
 AC_SUBST(DPM_LIBS)
 
+PKG_CHECK_MODULES(DLOG, dlog)
+AC_SUBST(DLOG_CFLAGS)
+AC_SUBST(DLOG_LIBS)
+
 AC_ARG_ENABLE(product-tv, AC_HELP_STRING([--enable-product-tv],[enable tv defined code]),
 [
   case "${enableval}" in
