Apply Tizen coding rule and remove unused definition
[Version] 0.10.135
[Profile] Common
[Issue Type]
[Dependency module] N/A
[Test] [M(T) - Boot=(OK), sdb=(OK), Home=(OK), Touch=(OK), Version=tizen-unified_20170913.3]

Change-Id: I6806a5a2ae239b48b60b1c815a8fbb599627f15b
Signed-off-by: Jeongmo Yang <jm80.yang@samsung.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -70,7 +70,7 @@ libmmfcamcorder_la_LIBADD = \
 			    $(DLOG_LIBS) \
 			    $(STORAGE_LIBS)
 
-libmmfcamcorder_la_CFLAGS += -DMMF_LOG_OWNER=0x010 -D_FILE_OFFSET_BITS=64
+libmmfcamcorder_la_CFLAGS += -D_FILE_OFFSET_BITS=64
 libmmfcamcorder_la_CFLAGS += -fdata-sections -ffunction-sections -Wl,--gc-sections
 libmmfcamcorder_la_LDFLAGS = -Wl,--gc-sections
 libmmfcamcorder_la_LIBADD += $(SYSTEMINFO_LIBS)
