Change zero copy buffer handling
[Version] 0.10.167
[Profile] Common
[Issue Type] Update
[Dependency module] N/A
[Test] [M(T) - Boot=(OK), sdb=(OK), Home=(OK), Touch=(OK), Version=tizen-unified_20180823.2]

Change-Id: I31677bb23243df4dc4ec1f5c7ec0148ff5d83a12
Signed-off-by: Jeongmo Yang <jm80.yang@samsung.com>

--- a/configure.ac
+++ b/configure.ac
@@ -31,6 +31,10 @@ PKG_CHECK_MODULES(GST_PLUGIN_BASE, gstreamer-base-1.0 >= 1.2.0)
 AC_SUBST(GST_PLUGIN_BASE_CFLAGS)
 AC_SUBST(GST_PLUGIN_BASE_LIBS)
 
+PKG_CHECK_MODULES(GST_ALLOCATORS, gstreamer-allocators-1.0 >= 1.2.0)
+AC_SUBST(GST_ALLOCATORS_CFLAGS)
+AC_SUBST(GST_ALLOCATORS_LIBS)
+
 PKG_CHECK_MODULES(GST_VIDEO, gstreamer-video-1.0 >= 1.2.0)
 AC_SUBST(GST_VIDEO_CFLAGS)
 AC_SUBST(GST_VIDEO_LIBS)
