--- a/Makefile.am
+++ b/Makefile.am
@@ -2,6 +2,10 @@ ACLOCAL_AMFLAGS='-I m4'
 
 SUBDIRS = src
 
+if GTESTS
+SUBDIRS += unittest
+endif
+
 pcfiles = mm-camcorder.pc
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = $(pcfiles)
